<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnUyg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="btnUyg1Goster"
        android:text="@string/uyg1_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnUyg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btnUyg2Goster"
        android:text="@string/uyg2_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUyg1" />

    <Button
        android:id="@+id/btnUyg3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uyg3_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUyg2"
        tools:onClick="btnUyg3Goster" />

    <Button
        android:id="@+id/btnUyg4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uyg4_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUyg3"
        tools:onClick="btnUyg4Goster" />

    <Button
        android:id="@+id/btnUyg5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uyg5_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUyg4"
        tools:onClick="btnUyg5Goster" />

    <Button
        android:id="@+id/btnUyg6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uyg6_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUyg5" />

    <Button
        android:id="@+id/btnUyg7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uyg7_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUyg6"
        tools:onClick="btnUyg7Goster" />

    <Button
        android:id="@+id/btnUyg8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uyg8_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUyg7"
        tools:onClick="btnUyg8Goster" />

    <Button
        android:id="@+id/btnUyg9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uyg9_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUyg8"
        tools:onClick="btnUyg9Goster" />

    <Button
        android:id="@+id/btnUyg10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uyg10_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUyg9"
        tools:onClick="btnUyg10Goster" />

</androidx.constraintlayout.widget.ConstraintLayout>